@@ -347,10 +347,10 @@ class LogOMFile(LogOM):
         result = set()
         from services.frontend.models import Frontend
         # FIXME : Add .distinct("ruleset") when implemented in djongo
-        for f in Frontend.objects.filter(log_forwarders=self.id, enabled=True).only('ruleset'):
+        for f in Frontend.objects.filter(log_forwarders=self.pk).only('ruleset'):
             result.add(f.ruleset)
         # Retrieve log_forwarders_parse_failure for log listeners
-        for f in Frontend.objects.filter(mode__in=["log", "filebeat"], log_forwarders_parse_failure=self.id, enabled=True).only('ruleset'):
+        for f in Frontend.objects.filter(mode__in=["log", "filebeat"], log_forwarders_parse_failure=self.pk).only('ruleset'):
             result.add(f.ruleset+"_garbage")
         return result
 
@@ -372,8 +372,7 @@ class LogOMFile(LogOM):
         tpl = Template(self.file)
 
         for ruleset in self.get_used_parsers():
-            res += "template(name=\"{}\" type=\"string\" string=\"{}\") \n" \
-                .format(self.template_id(ruleset=ruleset), tpl.render(Context({'ruleset': ruleset})))
+            res += f"template(name=\"{self.template_id(ruleset=ruleset)}\" type=\"string\" string=\"{tpl.render(Context({'ruleset': ruleset}))}\")\n"
         return res
 
     def __str__(self):
@@ -529,8 +528,8 @@ class LogOMHIREDIS(LogOM):
 
     def get_rsyslog_template(self):
         from services.frontend.models import Frontend
-        if self.dynamic_key and Frontend.objects.filter(log_forwarders=self.id, enabled=True).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.id, enabled=True).exists():
-            return "template(name=\"{}\" type=\"string\" string=\"{}\")".format(self.template_id(), self.key)
+        if self.dynamic_key and Frontend.objects.filter(log_forwarders=self.id).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.pk).exists():
+            return f"template(name=\"{self.template_id()}\" type=\"string\" string=\"{self.key}\")"
         return ""
 
 
@@ -689,14 +688,14 @@ class LogOMElasticSearch(LogOM):
         """ Render filenames based on filename attribute, depending on frontend used """
         result = set()
         from services.frontend.models import Frontend
-        for f in Frontend.objects.filter(log_forwarders=self.id, enabled=True).only('name') | Frontend.objects.filter(mode="log", log_forwarders_parse_failure=self.id, enabled=True).only('name'):
+        for f in Frontend.objects.filter(log_forwarders=self.pk).only('name') | Frontend.objects.filter(mode="log", log_forwarders_parse_failure=self.pk).only('name'):
             result.add(f"/var/log/internal/{self.name}_{f.name}_error.log")
         return result
 
     def get_rsyslog_template(self):
         from services.frontend.models import Frontend
-        if Frontend.objects.filter(log_forwarders=self.id, enabled=True).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.id, enabled=True).exists():
-            return "template(name=\"{}\" type=\"string\" string=\"{}\")".format(self.template_id(), self.index_pattern)
+        if Frontend.objects.filter(log_forwarders=self.pk).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.pk).exists():
+            return f"template(name=\"{self.template_id()}\" type=\"string\" string=\"{self.index_pattern}\")"
         return ""
 
     @property
@@ -848,9 +847,9 @@ class LogOMKAFKA(LogOM):
     def get_rsyslog_template(self):
         from services.frontend.models import Frontend
         template = ""
-        if Frontend.objects.filter(log_forwarders=self.id, enabled=True).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.id, enabled=True).exists():
+        if Frontend.objects.filter(log_forwarders=self.pk).exists() | Frontend.objects.filter(log_forwarders_parse_failure=self.pk).exists():
             if self.dynaKey:
-                template += "template(name=\"{}\" type=\"string\" string=\"{}\")".format(self.template_id(), self.key)
+                template += f"template(name=\"{self.template_id()}\" type=\"string\" string=\"{self.key}\")\n"
             if self.dynaTopic:
-                template += "\ntemplate(name=\"{}\" type=\"string\" string=\"{}\")".format(self.template_topic(), self.topic)
+                template += f"template(name=\"{self.template_topic()}\" type=\"string\" string=\"{self.topic}\")\n"
         return template
