@@ -45,7 +45,7 @@ module(load="omuxsock")
 {% for frontend in frontends -%}
 
 # Configuration of frontend {{ frontend.name }}
-{%- if frontend.enabled -%}
+{%- if frontend.enabled or frontend.listening_mode == "api" -%}
 {%- if frontend.mode == "filebeat" %}
     input(type="imhiredis"
         Server="{{ frontend.redis_server }}"
