@@ -17,10 +17,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
   - gunicorn 22.0.0 -> 23.0.0
   - jinja2 3.1.3 -> 3.1.6
   - sqlparse 0.4.4 -> 0.5.3
+- [FILEBEAT] Separate building configurations and restarting service
 ### Fixed
 - [API_PARSER] [WAF_CLOUDFLARE] Avoid querying the API with data from more than a week ago
 - [API_PARSER] [CISCO_DUO] Increment time pointer by 1s at the end of a run to avoid duplicates
 - [API_PARSER] [TRENDMICRO_VISIONONE] Add retries and check for total count
+- [FRONTEND] Hot-disable a collector manually
 
 
 ## [2.23.0] - 2025-03-28
